--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-
 </html>
 
 
@@ -19,6 +18,7 @@
 <xmp theme="cerulean" style="display:none;">
 ### Actividades
 
+ * <a href="SFD2015_alajuela/">Día de la Libertad de Software, 2015 (Alajuela)</a>
  * <a href="FLISoL2015/">Festival Latinoamericano de Instalación de Software Libre, 2015 (Alajuela)</a>
  * <a href="SFD2014_limon/">Día de la Libertad de Software, 2014 (Limón)</a>
  * <a href="SFD2014_alajuela/">Día de la Libertad de Software, 2014 (Alajuela)</a>
@@ -28,6 +28,7 @@
 ----
 ### Contacto:
 
+  * Github: https://github.com/ACTLibre
  
   * Redes sociales (privativas):
     * Twitter: https://twitter.com/ACTLibreCR
@@ -37,6 +38,8 @@
 ----
 **Nota:**
 Esta página esta hecha con <a href="http://http://daringfireball.net/projects/markdown//">markdown</a> y <a href="http://strapdownjs.com/">strapdown.js</a>.
+
+El código fuente está <a href="https://github.com/ACTLibre/website">acá</a>, sientase libre de mejorar la página. 
   
 </xmp>
 
